fixed gallery display on small screens, delete repeating photo

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1221,20 +1221,20 @@ main {
   grid-gap: 10px;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 20vw;
-  grid-auto-flow: dense;
+  grid-auto-flow: row dense;
 }
 
 @media (max-width: 800px) {
   .gallery__cards {
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 20vw;
+    grid-auto-rows: 25vw;
   }
 }
 
 @media (max-width: 650px) {
   .gallery__cards {
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 18vw;
+    grid-auto-rows: 30vw;
   }
 }
 
