--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -16,16 +16,16 @@
   grid-gap: 10px;
   grid-template-columns: repeat(3, 1fr); 
   grid-auto-rows: 20vw; 
-  grid-auto-flow: dense;
+  grid-auto-flow: row dense;
 
   @media (max-width: 800px) {
     grid-template-columns: repeat(4, 1fr);  
-    grid-auto-rows: 20vw;  
+    grid-auto-rows: 25vw;  
   }
 
   @media (max-width: 650px) {
     grid-template-columns: repeat(4, 1fr);  
-    grid-auto-rows: 18vw;  
+    grid-auto-rows: 30vw;  
   }
 }
 
